src/zenoh_dart.h

/// Copies the payload of a query into a caller-provided buffer.
///
/// @param query        Const pointer to a loaned query (as uint8_t*).
/// @param payload_out  Pointer to a buffer to receive the payload.
/// @param max_len      Maximum number of bytes to copy.
/// @return Number of bytes copied, or negative on failure.
FFI_PLUGIN_EXPORT int32_t zd_query_payload(
    const uint8_t* query,
    uint8_t* payload_out,
    int32_t max_len);
/// Returns the size of z_owned_shm_provider_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_shm_provider_sizeof(void);
/// Creates a default SHM provider with the given total size.
///
/// @param provider  Pointer to an uninitialized z_owned_shm_provider_t.
/// @param total_size  Total size of the SHM pool in bytes.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_shm_provider_new(z_owned_shm_provider_t* provider,
                                          size_t total_size);
/// Obtains a const loaned reference to the SHM provider.
FFI_PLUGIN_EXPORT const z_loaned_shm_provider_t* zd_shm_provider_loan(
    const z_owned_shm_provider_t* provider);
/// Drops (frees) the SHM provider.
FFI_PLUGIN_EXPORT void zd_shm_provider_drop(z_owned_shm_provider_t* provider);
/// Returns the available (free) bytes in the SHM provider.
FFI_PLUGIN_EXPORT size_t zd_shm_provider_available(
    const z_loaned_shm_provider_t* provider);
/// Returns the size of z_owned_shm_mut_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_shm_mut_sizeof(void);
/// Allocates a mutable SHM buffer from the provider.
///
/// @param provider  Const pointer to a loaned SHM provider.
/// @param buf       Pointer to an uninitialized z_owned_shm_mut_t.
/// @param size      Size of the buffer to allocate.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_shm_provider_alloc(
    const z_loaned_shm_provider_t* provider,
    z_owned_shm_mut_t* buf,
    size_t size);
/// Allocates a mutable SHM buffer with GC + defrag + blocking.
///
/// @param provider  Const pointer to a loaned SHM provider.
/// @param buf       Pointer to an uninitialized z_owned_shm_mut_t.
/// @param size      Size of the buffer to allocate.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_shm_provider_alloc_gc_defrag_blocking(
    const z_loaned_shm_provider_t* provider,
    z_owned_shm_mut_t* buf,
    size_t size);
/// Obtains a mutable loaned reference to the SHM buffer.
FFI_PLUGIN_EXPORT z_loaned_shm_mut_t* zd_shm_mut_loan_mut(
    z_owned_shm_mut_t* buf);
/// Returns a mutable pointer to the SHM buffer data.
FFI_PLUGIN_EXPORT uint8_t* zd_shm_mut_data_mut(z_loaned_shm_mut_t* buf);
/// Returns the length of the SHM buffer.
FFI_PLUGIN_EXPORT size_t zd_shm_mut_len(const z_loaned_shm_mut_t* buf);
/// Converts a mutable SHM buffer into owned bytes (consuming the buffer).
///
/// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
/// @param buf    Pointer to a z_owned_shm_mut_t (consumed).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_bytes_from_shm_mut(z_owned_bytes_t* bytes,
                                            z_owned_shm_mut_t* buf);
/// Drops (frees) a mutable SHM buffer.
FFI_PLUGIN_EXPORT void zd_shm_mut_drop(z_owned_shm_mut_t* buf);
/// Checks whether owned bytes are backed by shared memory.
///
/// Uses z_bytes_as_loaned_shm() to probe the bytes. If the call succeeds
/// (returns 0), the bytes are SHM-backed.
///
/// @param bytes  Pointer to a z_owned_bytes_t (cast to uint8_t*).
/// @return 1 if SHM-backed, 0 otherwise.
FFI_PLUGIN_EXPORT int8_t zd_bytes_is_shm(const uint8_t* bytes);
// ---------------------------------------------------------------------------
// Pull Subscriber (ring channel)
// ---------------------------------------------------------------------------

/// Returns the size of z_owned_ring_handler_sample_t in bytes.
FFI_PLUGIN_EXPORT int32_t zd_ring_handler_sample_sizeof(void);
/// Declares a pull subscriber using a ring channel buffer.
///
/// @param subscriber_out  Pointer to an uninitialized z_owned_subscriber_t (as uint8_t*).
/// @param handler_out     Pointer to an uninitialized z_owned_ring_handler_sample_t (as uint8_t*).
/// @param session         Const pointer to a loaned session (as uint8_t*).
/// @param key_expr        Null-terminated key expression string.
/// @param capacity        Ring buffer capacity.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_declare_pull_subscriber(
    uint8_t* subscriber_out, uint8_t* handler_out,
    const uint8_t* session, const char* key_expr,
    int32_t capacity);