package/lib/src/bindings.dart


  /// Copies the payload of a query into a caller-provided buffer.
  ///
  /// @param query        Const pointer to a loaned query (as uint8_t*).
  /// @param payload_out  Pointer to a buffer to receive the payload.
  /// @param max_len      Maximum number of bytes to copy.
  /// @return Number of bytes copied, or negative on failure.
  int zd_query_payload(
    ffi.Pointer<ffi.Uint8> query,
    ffi.Pointer<ffi.Uint8> payload_out,
    int max_len,
  ) {
    return _zd_query_payload(query, payload_out, max_len);
  }

  late final _zd_query_payloadPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
          )
        >
      >('zd_query_payload');
  late final _zd_query_payload = _zd_query_payloadPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Returns the size of z_owned_shm_provider_t in bytes.
  int zd_shm_provider_sizeof() {
    return _zd_shm_provider_sizeof();
  }

  late final _zd_shm_provider_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
        'zd_shm_provider_sizeof',
      );
  late final _zd_shm_provider_sizeof = _zd_shm_provider_sizeofPtr
      .asFunction<int Function()>();

  /// Creates a default SHM provider with the given total size.
  ///
  /// @param provider  Pointer to an uninitialized z_owned_shm_provider_t.
  /// @param total_size  Total size of the SHM pool in bytes.
  /// @return 0 on success, negative on failure.
  int zd_shm_provider_new(ffi.Pointer<ffi.Opaque> provider, int total_size) {
    return _zd_shm_provider_new(provider, total_size);
  }

  late final _zd_shm_provider_newPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Size)>
      >('zd_shm_provider_new');
  late final _zd_shm_provider_new = _zd_shm_provider_newPtr
      .asFunction<int Function(ffi.Pointer<ffi.Opaque>, int)>();

  /// Obtains a const loaned reference to the SHM provider.
  ffi.Pointer<ffi.Opaque> zd_shm_provider_loan(
    ffi.Pointer<ffi.Opaque> provider,
  ) {
    return _zd_shm_provider_loan(provider);
  }

  late final _zd_shm_provider_loanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_shm_provider_loan');
  late final _zd_shm_provider_loan = _zd_shm_provider_loanPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Drops (frees) the SHM provider.
  void zd_shm_provider_drop(ffi.Pointer<ffi.Opaque> provider) {
    return _zd_shm_provider_drop(provider);
  }

  late final _zd_shm_provider_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_shm_provider_drop',
      );
  late final _zd_shm_provider_drop = _zd_shm_provider_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the available (free) bytes in the SHM provider.
  int zd_shm_provider_available(ffi.Pointer<ffi.Opaque> provider) {
    return _zd_shm_provider_available(provider);
  }

  late final _zd_shm_provider_availablePtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_shm_provider_available',
      );
  late final _zd_shm_provider_available = _zd_shm_provider_availablePtr
      .asFunction<int Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the size of z_owned_shm_mut_t in bytes.
  int zd_shm_mut_sizeof() {
    return _zd_shm_mut_sizeof();
  }

  late final _zd_shm_mut_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_shm_mut_sizeof');
  late final _zd_shm_mut_sizeof = _zd_shm_mut_sizeofPtr
      .asFunction<int Function()>();

  /// Allocates a mutable SHM buffer from the provider.
  ///
  /// @param provider  Const pointer to a loaned SHM provider.
  /// @param buf       Pointer to an uninitialized z_owned_shm_mut_t.
  /// @param size      Size of the buffer to allocate.
  /// @return 0 on success, negative on failure.
  int zd_shm_provider_alloc(
    ffi.Pointer<ffi.Opaque> provider,
    ffi.Pointer<ffi.Opaque> buf,
    int size,
  ) {
    return _zd_shm_provider_alloc(provider, buf, size);
  }

  late final _zd_shm_provider_allocPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Size,
          )
        >
      >('zd_shm_provider_alloc');
  late final _zd_shm_provider_alloc = _zd_shm_provider_allocPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>, int)
      >();

  /// Allocates a mutable SHM buffer with GC + defrag + blocking.
  ///
  /// @param provider  Const pointer to a loaned SHM provider.
  /// @param buf       Pointer to an uninitialized z_owned_shm_mut_t.
  /// @param size      Size of the buffer to allocate.
  /// @return 0 on success, negative on failure.
  int zd_shm_provider_alloc_gc_defrag_blocking(
    ffi.Pointer<ffi.Opaque> provider,
    ffi.Pointer<ffi.Opaque> buf,
    int size,
  ) {
    return _zd_shm_provider_alloc_gc_defrag_blocking(provider, buf, size);
  }

  late final _zd_shm_provider_alloc_gc_defrag_blockingPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Size,
          )
        >
      >('zd_shm_provider_alloc_gc_defrag_blocking');
  late final _zd_shm_provider_alloc_gc_defrag_blocking =
      _zd_shm_provider_alloc_gc_defrag_blockingPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>, int)
          >();

  /// Obtains a mutable loaned reference to the SHM buffer.
  ffi.Pointer<ffi.Opaque> zd_shm_mut_loan_mut(ffi.Pointer<ffi.Opaque> buf) {
    return _zd_shm_mut_loan_mut(buf);
  }

  late final _zd_shm_mut_loan_mutPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_shm_mut_loan_mut');
  late final _zd_shm_mut_loan_mut = _zd_shm_mut_loan_mutPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns a mutable pointer to the SHM buffer data.
  ffi.Pointer<ffi.Uint8> zd_shm_mut_data_mut(ffi.Pointer<ffi.Opaque> buf) {
    return _zd_shm_mut_data_mut(buf);
  }

  late final _zd_shm_mut_data_mutPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_shm_mut_data_mut');
  late final _zd_shm_mut_data_mut = _zd_shm_mut_data_mutPtr
      .asFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the length of the SHM buffer.
  int zd_shm_mut_len(ffi.Pointer<ffi.Opaque> buf) {
    return _zd_shm_mut_len(buf);
  }

  late final _zd_shm_mut_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_shm_mut_len',
      );
  late final _zd_shm_mut_len = _zd_shm_mut_lenPtr
      .asFunction<int Function(ffi.Pointer<ffi.Opaque>)>();

  /// Converts a mutable SHM buffer into owned bytes (consuming the buffer).
  ///
  /// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
  /// @param buf    Pointer to a z_owned_shm_mut_t (consumed).
  /// @return 0 on success, negative on failure.
  int zd_bytes_from_shm_mut(
    ffi.Pointer<ffi.Opaque> bytes,
    ffi.Pointer<ffi.Opaque> buf,
  ) {
    return _zd_bytes_from_shm_mut(bytes, buf);
  }

  late final _zd_bytes_from_shm_mutPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
        >
      >('zd_bytes_from_shm_mut');
  late final _zd_bytes_from_shm_mut = _zd_bytes_from_shm_mutPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
      >();

  /// Drops (frees) a mutable SHM buffer.
  void zd_shm_mut_drop(ffi.Pointer<ffi.Opaque> buf) {
    return _zd_shm_mut_drop(buf);
  }

  late final _zd_shm_mut_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_shm_mut_drop',
      );
  late final _zd_shm_mut_drop = _zd_shm_mut_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Checks whether owned bytes are backed by shared memory.
  ///
  /// Uses z_bytes_as_loaned_shm() to probe the bytes. If the call succeeds
  /// (returns 0), the bytes are SHM-backed.
  ///
  /// @param bytes  Pointer to a z_owned_bytes_t (cast to uint8_t*).
  /// @return 1 if SHM-backed, 0 otherwise.
  int zd_bytes_is_shm(ffi.Pointer<ffi.Uint8> bytes) {
    return _zd_bytes_is_shm(bytes);
  }

  late final _zd_bytes_is_shmPtr =
      _lookup<ffi.NativeFunction<ffi.Int8 Function(ffi.Pointer<ffi.Uint8>)>>(
        'zd_bytes_is_shm',
      );
  late final _zd_bytes_is_shm = _zd_bytes_is_shmPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>)>();

  /// Returns the size of z_owned_ring_handler_sample_t in bytes.
  int zd_ring_handler_sample_sizeof() {
    return _zd_ring_handler_sample_sizeof();
  }

  late final _zd_ring_handler_sample_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
        'zd_ring_handler_sample_sizeof',
      );
  late final _zd_ring_handler_sample_sizeof = _zd_ring_handler_sample_sizeofPtr
      .asFunction<int Function()>();

  /// Declares a pull subscriber using a ring channel buffer.
  ///
  /// @param subscriber_out  Pointer to an uninitialized z_owned_subscriber_t (as uint8_t*).
  /// @param handler_out     Pointer to an uninitialized z_owned_ring_handler_sample_t (as uint8_t*).
  /// @param session         Const pointer to a loaned session (as uint8_t*).
  /// @param key_expr        Null-terminated key expression string.
  /// @param capacity        Ring buffer capacity.
  /// @return 0 on success, negative on failure.
  int zd_declare_pull_subscriber(
    ffi.Pointer<ffi.Uint8> subscriber_out,
    ffi.Pointer<ffi.Uint8> handler_out,
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Char> key_expr,
    int capacity,
  ) {
    return _zd_declare_pull_subscriber(
      subscriber_out,
      handler_out,
      session,
      key_expr,
      capacity,
    );
  }

  late final _zd_declare_pull_subscriberPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('zd_declare_pull_subscriber');
  late final _zd_declare_pull_subscriber = _zd_declare_pull_subscriberPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();
